<resources>
    <string name="app_name">MarkovChain</string>
    <string name="title_activity_do_markov">DoMarkov</string>
    <string name="empty_list">Busy generating output</string>
    <string name="title_activity_bible_markov">BibleMarkovActivity</string>
    <string name="generating_data">Generating Data</string>
    <string name="element_text">Element</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fragment_retain_instance_msg">Please wait while loading data\n
        If you press back I will reattach when you launch the Retained Fragment again</string>
    <string name="restart">RESTART</string>
    <string name="toast_value">TOAST VALUE</string>
    <string name="this_is_the_main_view">This is the main view\nLong click me to launch dialog</string>
    <string name="dialog_number">Dialog #</string>
    <string name="repeat">REPEAT</string>
    <string name="choose_action_to_perform">Choose action to perform</string>
    <string name="search">SEARCH</string>
    <string name="enter_search_words_below">Enter search words below</string>
    <string name="select_book_chapter_and_verse">Select Book chapter and verse</string>
    <string name="colon">:</string>
    <string name="dismiss">DISMISS</string>
    <string name="next">NEXT</string>
    <string name="notes">Notes</string>
    <string name="add_button">ADD</string>
    <string name="old">OLD</string>
    <string name="title_activity_test_bench_mark">TestBenchMark</string>
    <string name="start">START</string>
    <string name="abort">ABORT</string>
    <string name="benchmark_msg">Push the START button to start the benchmark</string>
    <string name="start_one">START ONE</string>
    <string name="start_two">START TWO</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="benchmark_results">Benchmark results\n</string>
    <string name="space_only" />
    <string name="go">GO</string>
    <string name="steps_in_progressbar">Steps in ProgressBar</string>
    <string name="title_activity_clock_trisect">ClockTrisect</string>
    <string name="hello_you_son_of_a_gun">Hello you son of a gun</string>
    <string name="start_the_clock">Click to trisect the clock</string>
    <string name="title_activity_what_is_man">WhatIsMan</string>
    <string name="what_is_man">What is man</string>
    <string name="waiting_for_data_to_load">Waiting for data to load…</string>
    <string name="title_activity_transcend">TranscendActivity</string>
    <string name="transendentalist_works">Transendentalist Works</string>
    <string name="screen_size">This is the default screen size</string>
    <string name="sort_best_trisection_to_worst">Sort best trisection to worst</string>
    <string name="iterations_per_step">Iterations per step</string>
</resources>
